--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,9 @@
                         <p>Продукция, изготовленная на нашем оборудовании, находит широкое применение в строительстве и благоустройстве. Десятки укомплектованных и запущенных производственных линий в различных регионах России и СНГ делают RPK «Rostpolikraft» надежным партнером и поставщиком полимерпесчаного оборудования. Наше оборудование помогает решать проблемы экологического масштаба связанные с загрязнением пластиковыми отходами окружающей среды.</p>
                     </div>
                     <div class="col-lg-6">
-                        <a href="https://www.youtube.com/embed/XBWjsJa5Zgc" target="_blank" onClick="window.open(this.href, '', 'width='+screen.availWidth/2+',height='+screen.availHeight/2+',top='+screen.availHeight/4+',left='+screen.availWidth/4); return false;">
-
-                            <img src="//img.youtube.com/vi/XBWjsJa5Zgc/sddefault.jpg" width="640" height="450">
-
+                        <img src="//img.youtube.com/vi/XBWjsJa5Zgc/sddefault.jpg">
+                        <a data-fancybox href="https://www.youtube.com/embed/XBWjsJa5Zgc" class="icon-youtube">
+                            <img src="assets/design/images/18.png" alt="">
                         </a>
                         <!--<iframe width="100%"  src="https://www.youtube.com/embed/XBWjsJa5Zgc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     </div>
