--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="col-lg-6">
                         <img src="//img.youtube.com/vi/XBWjsJa5Zgc/sddefault.jpg">
-                        <a data-fancybox href="https://www.youtube.com/embed/XBWjsJa5Zgc" class="icon-youtube">
+                        <a data-fancybox href="https://www.youtube.com/embed/XBWjsJa5Zgc" class="youtube-icon">
                             <img src="assets/design/images/18.png" alt="">
                         </a>
                         <!--<iframe width="100%"  src="https://www.youtube.com/embed/XBWjsJa5Zgc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
@@ -102,7 +102,7 @@
                             <div class="form-group">
                                 <div class="row mx-0 mx-lg-3">
                                     <div class="col-lg col-7 px-0 pr-1 px-lg-3">
-                                        <input type="button" class="btn open-phone order-btn py-3 btn-block" value="Заказать по телефону">
+                                        <a href="#" class="btn open-phone order-btn py-3 btn-block" value="Заказать по телефону">Заказать по телефону</a>
                                         <div class="d-none">
                                             8 898 899 22 47
                                         </div>
